--- a/src/main/resources/assets/forging_and_crafting/lang/zh_cn.json
+++ b/src/main/resources/assets/forging_and_crafting/lang/zh_cn.json
@@ -33,17 +33,17 @@
   "item.forging_and_crafting.diamond_upgrade": "钻石之升级模板",
   "block.forging_and_crafting.nether_nugget_block": "下界合金碎片粒矿",
   "enchantment.forging_and_crafting.flying_apsaras": "飞天",
-  "block.forging_and_crafting.economic_cluster_plank": "Economic Cluster Plank",
+  "block.forging_and_crafting.economic_cluster_plank": "经济木板",
   "item.forging_and_crafting.iron_star_upgrade_axe": "升级铁之斧",
   "item.forging_and_crafting.iron_star_upgrade_sword": "升级铁之剑",
   "block.forging_and_crafting.iron_upgrade_star_roe": "升级铁之星矿",
-  "block.forging_and_crafting.economic_cluster_glass_block": "Economic Cluster Glass Block",
-  "block.forging_and_crafting.economic_cluster_stone": "Economic Cluster Stone",
+  "block.forging_and_crafting.economic_cluster_glass_block": "经济草方块",
+  "block.forging_and_crafting.economic_cluster_stone": "经济石头",
   "item.forging_and_crafting.copper_hoe": "铜锄",
   "item.forging_and_crafting.copper_pickaxe": "铜稿",
   "item.forging_and_crafting.gold_upgrade_sword": "升级金之剑",
   "item.forging_and_crafting.gold_upgrade": "金之升级模板",
-  "block.forging_and_crafting.economic_cluster_log": "Economic Cluster Log",
+  "block.forging_and_crafting.economic_cluster_log": "经济原木",
   "item.forging_and_crafting.iron_star_upgrade_pickaxe": "升级铁之稿",
   "item.forging_and_crafting.gold_upgrade_shovel": "升级金之铲",
   "block.forging_and_crafting.copper_star_block": "铜星矿",
@@ -52,7 +52,7 @@
   "advancements.netherite_upgrade_star_all.title": "升级下界合金之星！！",
   "advancements.netherite_upgrade_star_all.descr": "当玩家获得了升级下界合金之星",
   "block.forging_and_crafting.advanced_workbench": "高级工作台",
-  "biome.forging_and_crafting.economic_cluster": "Economic Cluster",
+  "biome.forging_and_crafting.economic_cluster": "经济群系",
   "item.forging_and_crafting.copper_armor_boots": "铜靴子",
   "item.forging_and_crafting.nether_upgrade_star": "升级下界合金之星",
   "item.forging_and_crafting.forging_world": "锻造世界激活器",
@@ -60,7 +60,7 @@
   "item.forging_and_crafting.netherite_upgrade_star_hoe": "升级下界合金之锄",
   "block.forging_and_crafting.primary_forging_table": "初级锻造机",
   "item.forging_and_crafting.gold_upgrade_pickaxe": "升级金之稿",
-  "advancements.diamond_upgrade_star_all.descr": "当玩家获得了升级钻石之对星",
+  "advancements.diamond_upgrade_star_all.descr": "当玩家获得了升级钻石之星",
   "item.forging_and_crafting.gold_star_upgrade_hoe": "升级金之锄",
   "item.forging_and_crafting.diamond_star_upgrade_axe": "升级钻石之斧",
   "item.forging_and_crafting.netherite_upgrade_star_shovel": "升级下界合金之铲",
