--- a/src/main/resources/assets/forging_and_crafting/lang/en_us.json
+++ b/src/main/resources/assets/forging_and_crafting/lang/en_us.json
@@ -65,7 +65,7 @@
   "item.forging_and_crafting.diamond_star_upgrade_axe": "Diamond Star Upgrade Axe",
   "item.forging_and_crafting.netherite_upgrade_star_shovel": "Netherite Upgrade Star Shovel",
   "item.forging_and_crafting.nether_nugget": "Nether Nugget",
-  "biome.forging_and_crafting.forging_world_swqx": "Forging World SWQX",
+  "biome.forging_and_crafting.forging_world_biome": "Forging World Biome",
   "item.forging_and_crafting.copper_particles": "Copper Particles",
   "block.forging_and_crafting.economic_cluster_gem_fragments_block": "Economic Cluster Gem Fragments Block",
   "item.forging_and_crafting.economic_cluster_gem_fragments": "Economic Cluster Gem Fragments",
