--- a/src/main/resources/assets/forging_and_crafting/lang/zh_cn.json
+++ b/src/main/resources/assets/forging_and_crafting/lang/zh_cn.json
@@ -65,7 +65,7 @@
   "item.forging_and_crafting.diamond_star_upgrade_axe": "升级钻石之斧",
   "item.forging_and_crafting.netherite_upgrade_star_shovel": "升级下界合金之铲",
   "item.forging_and_crafting.nether_nugget": "下界合金碎片粒",
-  "biome.forging_and_crafting.forging_world_swqx": "锻造世界生物群系",
+  "biome.forging_and_crafting.forging_world_biome": "锻造世界生物群系",
   "item.forging_and_crafting.copper_particles": "铜粒",
   "block.forging_and_crafting.economic_cluster_gem_fragments_block": "经济宝石碎片矿",
   "item.forging_and_crafting.economic_cluster_gem_fragments": "经济宝石碎片",
